<?xml version="1.0" encoding="utf-8"?>
<!--
  Fragment motion is wired in MainActivity via NavMotion (MaterialFadeThrough /
  MaterialSharedAxis), not app:enterAnim. XML view animations would stack on
  those transitions and skip returnTransition on back / navigateUp.
-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.medicheckreminder.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.medicheckreminder.ui.auth.LoginFragment"
        android:label="@string/login_screen_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.medicheckreminder.ui.auth.RegisterFragment"
        android:label="@string/register_headline"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.medicheckreminder.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.medicheckreminder.ui.home.HomeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/medicationsListFragment"
        android:name="com.example.medicheckreminder.ui.medications.MedicationsListFragment"
        android:label="@string/nav_medications"
        tools:layout="@layout/fragment_medications_list">
        <action
            android:id="@+id/action_medicationsListFragment_to_addEditMedicationFragment"
            app:destination="@id/addEditMedicationFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditMedicationFragment"
        android:name="com.example.medicheckreminder.ui.medications.AddEditMedicationFragment"
        android:label="@string/add_medication"
        tools:layout="@layout/fragment_add_edit_medication">
        <argument
            android:name="medicationId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.medicheckreminder.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/healthMeasurementsFragment"
        android:name="com.example.medicheckreminder.ui.health.HealthMeasurementsFragment"
        android:label="@string/nav_health"
        tools:layout="@layout/fragment_health_measurements" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.medicheckreminder.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
